# LearnOpenGL

./: Build.bat  CMakeLists.txt
Common/Include/OpenGL/: Camera.h  Material.h  Shader.h  VertexArray.h  Window.h
Common/Include/glad/: glad.h
Common/Src/: glad.c
Common/Src/OpenGL/: Camera.cpp  Material.cpp  Shader.cpp  VertexArray.cpp  Window.cpp
Light/: CMakeLists.txt  Window.cpp  Window.h  main.cpp
Light/Shader/: shader.frag  shader.vert
Test/: CMakeLists.txt  Window.cpp  Window.h  main.cpp
Test/Shader/: shader.frag  shader.vert
